configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-configmap
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
