deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      env: test
  template:
    metadata:
      labels:
        env: test
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
