svc.loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-loadbalancer
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    env: test
