svc.nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-nodeport
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    env: test
